# ollama-gui

./: Cargo.toml  Ollama_Interface-x86_64.AppImage  README.md  build-appimage.sh  ollama_app.py  run-with-debug.sh
AppDir/: .DirIcon  AppRun  ollama-interface.desktop
src/: main.rs
static/: index.html
