[package]
name = "ollama-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
pulldown-cmark = "0.13.0"
urlencoding = "2.1.0"
async-stream = "0.3.5"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true       # Enable Link Time Optimization
codegen-units = 1  # Reduce number of codegen units to increase optimizations
strip = true     # Strip symbols from the binary.
panic = "abort"  # Abort on panic
